# nobodywho-rs

./: README.md  flake.nix
.github/workflows/: main.yml
example-game/: chat.gd  example.tscn  nobody.gdextension  nobody_who_db.gd  nobody_who_embedding.gd  nobody_who_prompt_chat.gd  nobodywho.gdextension  player.tscn  project.godot
godot/: .gitignore  icon.svg.import  player.tscn  prompt.gd
nobody/: .gitignore  Cargo.toml  crane.nix  default.nix  shell.nix
nobody/src/: lib.rs  llm.rs  model.rs
nobodywho/: Cargo.toml  default.nix  nobody.gdextension  nobodywho.gdextension  shell.nix
nobodywho/src/: chat_state.rs  db.rs  lib.rs  llm.rs  sampler_config.rs  sampler_resource.rs
