[package]
name = "nobodywho"
version = "3.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
encoding_rs = "0.8.34"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "experimental-threads",
] }
llama-cpp-2 = { version = "0.1.84" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
sqlite-vec = "0.1.5"
thiserror = "2.0.3"
wgpu = "23.0.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "0.1.84", features = ["vulkan"] }
